--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body {
     color: #333;
+    background: #1e1f24;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -17,11 +18,16 @@ body {
 #header {
     color: white;
     font-weight: bold;
-    text-align: center;
-    background: #88f;
+    text-align: left;
+    background: rgb(59, 59, 97);
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#header #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #header #tagline {
@@ -35,5 +41,6 @@ body {
 }
 
 #post{
+    background: white;
     padding: 1em;
 }
