--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,3 +37,11 @@ body {
 #post{
     padding: 1em;
 }
+
+#footer{
+    color: white;
+    font-weight: bold;
+    background: rgb(136, 191, 255);
+    margin: 0;
+    padding: 1px;
+}
